# oca-addons-collections

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  init.sh  readme.md  repos  update.sh
ddmrp/: .pre-commit-config.yaml  README.md
ddmrp/setup/_metapackage/: pyproject.toml
pos/pos_payment_method_image/i18n/: fr.po
pos_membership_extension/i18n/: fr.po
pos_order_new_line/i18n/: fr.po
storage/: README.md  requirements.txt
storage/setup/_metapackage/: pyproject.toml
