[project]
name = "odoo-addons-oca-storage"
version = "17.0.20240531.1"
dependencies = [
    "odoo-addon-fs_attachment>=17.0dev,<17.1dev",
    "odoo-addon-fs_base_multi_image>=17.0dev,<17.1dev",
    "odoo-addon-fs_base_multi_media>=17.0dev,<17.1dev",
    "odoo-addon-fs_file>=17.0dev,<17.1dev",
    "odoo-addon-fs_file_demo>=17.0dev,<17.1dev",
    "odoo-addon-fs_image>=17.0dev,<17.1dev",
    "odoo-addon-fs_image_thumbnail>=17.0dev,<17.1dev",
    "odoo-addon-fs_product_brand_multi_image>=17.0dev,<17.1dev",
    "odoo-addon-fs_product_multi_image>=17.0dev,<17.1dev",
    "odoo-addon-fs_product_multi_media>=17.0dev,<17.1dev",
    "odoo-addon-fs_storage>=17.0dev,<17.1dev",
    "odoo-addon-image_tag>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
